[package]
name = "seam-lattice"
version = "0.1.0"
authors = ["Elf M. Sternberg <elf.sternberg@gmail.com>"]
edition = "2018"
description = "Convert a 2D grid into a lattice for seam operations."
repository = "https://github.com/elfsternberg/seam-lattice"
readme = "./README"
license = "MPL-2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version="0.4.8", features=["max_level_debug"] }